--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,207 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>HW8</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HW5</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <div class="Content">
-    <header id="header">Header</header>
-    <section id="about">About</section>
-    <section id="education">Education</section>
-    <section id="experience">Work Experience</section>
-    <section id="skills">Skills</section>
-    <section id="contacts">Contacts</section>
-    <footer id="footer">Footer</footer>
+    <header id="header">
+        <img src="img/logo.svg" alt="logo" width="40" height="40">
+        <nav class="navbar">
+            <ul>
+                <li><span class="navspan">About me</span></li>
+                <li><span class="navspan">Education</span></li>
+                <li><span class="navspan">Work Experience</span></li>
+                <li><span class="navspan">Skills</span></li>
+                <li><span class="navspan">Contacts</span></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="about">
+        <p>
+            Hello!
+            <br>
+            My name is <span class="alex">Alex Smith</span>
+            <br class="desktop-br">
+            I'm creative front-end developer
+        </p>
+        <img class="Image" width="500px" alt="main photo"/>
+    </section>
+    <section id="education">
+        <h2>Education</h2>
+        <div class="all-edu">
+            <div class="one-edu">
+                <div class="text-head">Kingston university</div>
+                <div class="text-location">Master's degree - Software Engineering</div>
+                <div class="text-date">2019 - 2021</div>
+            </div>
+            <div class="one-edu">
+                <div class="text-head">Kingston university</div>
+                <div class="text-location">Bachelor's degree - Computer Engineering</div>
+                <div class="text-date">2015 - 2019</div>
+            </div>
+            <div class="one-edu">
+                <div class="text-head">Westminster School</div>
+                <div class="text-location">Diploma's degree - Mathematics</div>
+                <div class="text-date">2013 - 2015</div>
+            </div>
+            <div class="one-edu">
+                <div class="text-head">Kingston university</div>
+                <div class="text-location">Master's degree - Software Engineering</div>
+                <div class="text-date">2019 - 2021</div>
+            </div>
+            <div class="one-edu">
+                <div class="text-head">Kingston university</div>
+                <div class="text-location">Bachelor's degree - Computer Engineering</div>
+                <div class="text-date">2015 - 2019</div>
+            </div>
+            <div class="one-edu">
+                <div class="text-head">Westminster School</div>
+                <div class="text-location">Diploma's degree - Mathematics</div>
+                <div class="text-date">2013 - 2015</div>
+            </div>
+        </div>
+    </section>
+    <section id="experience">
+        <h2>Work Experience</h2>
+        <ul>
+            <li>Apple</li>
+            <li>Microsoft</li>
+            <li>Facebook</li>
+        </ul>
+        <div class="cv-body">
+            <img class="Image" width="554px" height="400px" alt="main photo"/>
+            <div class="main-text">
+                <div class="text-head">Front-end Developer Apple.Inc</div>
+                <div class="text-location">California, United States</div>
+                <div class="text-date">Nov 2020 - Present · Full-time</div>
+                <p>
+                    В начале XX века немецкие психологи провели исследования восприятия человеком окружающего мира. Они выявили естественное стремление человека найти порядок в беспорядке.
+                </p>
+                <p>
+                    Их эксперименты показали, что когда мозг обрабатывает полученные образы, он воспринимает разрозненные элементы как единое целое. Подсознательно мы пытаемся группировать похожие элементы, распознавать закономерности и таким образом упрощать сложные образы.
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <div class="skills-table">
+            <div class="skill-item">
+                <span>React</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 90%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Angular</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 70%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>HTML + CSS</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 100%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Javascript</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 20%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Python</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 25%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Soft skill</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 80%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Motion graphics</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 60%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>UX</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 20%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>UI</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 50%"></div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>3D</span>
+                <div class="progress-bar">
+                    <div class="progress-fill" style="width: 25%"></div>
+                </div>
+            </div>
+        </div>
+        <div class="add-form">
+            <div class="text-head">Add new skill</div>
+            <form>
+                <div class="form-inputs">
+                    <div class="input">
+                        <div class="text-location">Skill name</div>
+                        <input type="text" name="skill-name">
+                    </div>
+                    <div class="input">
+                        <div class="text-location">Skill proficiency percentage, %</div>
+                        <input type="text" name="skill-percentage">
+                    </div>
+                    <input type="submit" value="Add" class="form-button">
+                </div>
+            </form>
+        </div>
+    </section>
+    <section id="contacts">
+        <h2>Contacts</h2>
+        <div class="all-contacts">
+            <div class="contact-item">
+                <img src="img/pin.svg" alt="small picture for vibe only" width="40" height="40">
+                <div class="contact-info">
+                    <div class="text-head">Address</div>
+                    <div class="text-location">16 Lva Tolstogo str., Moscow</div>
+                </div>
+            </div>
+            <div class="contact-item">
+                <img src="img/phone.svg" alt="small picture for vibe only" width="40" height="40">
+                <div class="contact-info">
+                    <div class="text-head">Phone</div>
+                    <div class="text-location">+7 (000) 000 00 00</div>
+                </div>
+            </div>
+            <div class="contact-item">
+                <img src="img/mail.svg" alt="small picture for vibe only" width="40" height="40">
+                <div class="contact-info">
+                    <div class="text-head">E-Mail</div>
+                    <div class="text-location">myemail@yandex.ru</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer id="footer">
+        <div class="socials">
+            <img src="img/Instagram.svg" alt="logo" width="24" height="24">
+            <img src="img/GitHub.svg" alt="logo" width="24" height="24">
+            <img src="img/Twitter.svg" alt="logo" width="24" height="24">
+            <img src="img/LinkedIn.svg" alt="logo" width="24" height="24">
+        </div>
+        <p class="copyright">© 2023</p>
+    </footer>
 </div>
-
-<img class="Image" width="500px"/>
-
 </body>
 </html>
